fix(PageHeader): always render overflow breadcrumb

--- a/packages/styles/scss/components/page-header/_page-header.scss
+++ b/packages/styles/scss/components/page-header/_page-header.scss
@@ -84,10 +84,12 @@
     .#{$prefix}--breadcrumb {
       display: flex;
     }
-    // .#{$prefix}--page-header-overflow-breadcrumb {
-    //   opacity: 0;
-    // }
+    .#{$prefix}--page-header-overflow-breadcrumb {
+      display: none;
+      opacity: 0;
+    }
     .#{$prefix}--page-header-overflow-breadcrumb-with-items {
+      display: block;
       opacity: 1;
     }
   }
